--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,40 @@
 html {
   box-sizing: border-box;
   font-family: "Roboto Slab", serif;
+  line-height: 1.5;
+
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+}
+
+.img-flex {
+  display: block;
+  width: 100%;
+}
+
+figure {
+  position: relative;
+  margin: 0;
+}
+
+figcaption {
+  position: absolute;
+  max-width: 15em;
+  bottom: .5rem;
+  left: .5rem;
+  color: #fff;
+  background-color: #000;
+  opacity: .5;
+  border-radius: .5rem;
+  padding: 1rem;
 }
