--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,7 @@
 
 html {
   box-sizing: border-box;
-  font-family: "Roboto Slab", serif;
-  line-height: 1.5;
+  font: 100%/1.5 'Roboto Slab', serif;
 
   -moz-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
